# s-function

./: .gitignore  CMakeLists.txt  README.md  include_directories.txt  link_libraries.txt  source_files.txt  test_s_function.slx
cmake/: FindMatlab.cmake
include/: optical_flow_velocity.hpp
src/: optical_flow_velocity.cpp  s_function.cpp
